front/style.css
* {
    font-family: "Inter", Arial;
   }

#header {
    display: flex;
    flex-direction: column;
    width: 100vw;
    align-items: center;
    text-align: center;
}

h1 {
    width: fit-content;
    font-size: 45px;
}

#content {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
    width: 100vw;
    gap: 30px;
    align-self: center;
    width: 64vw;
    margin-top: 60px;
}

#searchButton {
    height: 33px;
    width: 400px;
    border-radius: 7px;
    font-size: 20px;
    vertical-align:middle;
    border: 1px solid lightgray;
    padding-left: 8px;
}

#searchByWord {
    background-color: rgb(245, 245, 245);
    background-image: url(./resources/search.svg);
    color : lightgray;
    background-repeat: no-repeat;
    height: 39px;
    width: 36px;
    background-position: center;
    background-size: 60%;
    border-radius: 5px;
    vertical-align:middle;
    border: lightgray 1px solid;
}
#searchByWord:hover {
    background-color: rgb(230, 230, 230);
    cursor: pointer;
}

#createTask {
    background-color: rgb(101, 101, 240);
    color: white;
    font-size: 16px;
    border: none;
    height: 40px;
    width: 100px;
    border-radius: 10px;
    padding: 2px;
    
}
#createTask:hover {
    background-color: rgb(87, 87, 209);
    cursor: pointer;
}

.inputform {
    display: flex;
    flex-direction: column;
    align-items: left;
    padding: 35px 70px 35px 70px;
    justify-content: space-evenly;
    width: 500px;
    height: 50vh;
    background-color: white;
    -webkit-box-shadow: 0px 0px 7px 5px rgba(0,0,0,0.31); 
    box-shadow: 0px 0px 7px 5px rgba(0,0,0,0.31);
    position:fixed;
    top: 50vh;
    left: 50vw;
    border: 3px solid #f1f1f1;
    transform: translate(-50%, -50%);
    gap: 30px;
    opacity: 100%;
}

.popup {
    display: none;
}

.task-item {
    display: flex;
    flex-direction: row;
    justify-content:space-evenly;
    align-items: center;
    width: 60vw;
    padding: 10px;
    border-radius: 10px;
    margin: 5px;
    background-color: rgb(245, 245, 245);
}
.task-item:hover {
    background-color: rgb(230, 230, 230);
    cursor: pointer;
}


.delete-button {
    color: grey;
    border: none;
    border-radius: 10px;
    padding: 10px;
    background-color: transparent;
    margin-left: 10px;
}
.delete-button:hover {
    cursor: pointer;
    color: rgb(0, 0, 0);
}

.edit-button {
    background-color: transparent;
    color: grey;
    border: none;
    border-radius: 10px;
    padding: 10px;
}
.edit-button:hover {
    
    color: rgb(0, 0, 0);
    cursor: pointer;
}

.task-item > * {
    width: 20%;
}

.button-container {
    display: flex;
    flex-direction: row;
    justify-content:right;
}

#task-list {
    margin-top: 20px;
    width: fit-content;
    padding: 15px 18px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    gap: 5px;
    border: lightgray 1px solid;

}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.task-item-name{
    font-size: 20px;
    font-weight: bold;
}

.submit-form-button {
    background-color: green;
    color: white;
    font-size: 16px;
    border: none;
    height: 40px;
    width: 100px;
    border-radius: 10px;
    padding: 2px;
}
.submit-form-button:hover {
    background-color: rgb(0, 107, 0);
    cursor: pointer;
}

.cancelButton {
    background-color: red;
    color: white;
    font-size: 16px;
    border: none;
    height: 40px;
    width: 100px;
    border-radius: 10px;
    padding: 2px;
}
.cancelButton:hover {
    background-color: rgb(221, 0, 0);
    cursor: pointer;
}

.form-item {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.form-item > * {
    font-size: 20px;
}

#task-details {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 20px;
    background-color: white;
    border: 1px solid #ccc;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    text-align: center;
    width: 300px;
    -webkit-box-shadow: 0px 0px 7px 5px rgba(0,0,0,0.31); 
    box-shadow: 0px 0px 7px 5px rgba(0,0,0,0.31);
    display: flex;
    flex-direction: column;
    align-items: center;
}

#task-details > p {
    font-size: 20px;
    overflow: hidden;
}

#task-details > div {
    background-color: rgb(245, 245, 245);
    padding: 5px 0 5px 0;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 1px solid lightgray;
}

#task-details > button {
    margin-top: 10px;
}

h2 {
    font-size: 50px;
    margin: 10px;
}

h3 {
    margin-bottom: -10px;
}

#background-protection {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(119, 101, 101, 0.5);
    opacity: 30%;
    display: none;
}


/* task status colors */

.status-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
    align-items: center;
    padding-left: 10%;

}

.task-status-color {
    border-radius: 100%;
    height: 20px;
    width: 20px;
    border: 2px solid lightgray;
}

.COMPLETED {
    background-color: green;
}

.IN_PROGRESS {
    background-color: rgb(101, 101, 240);
}

.ON_HOLD {
    background-color: yellow;
}

